<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/fragment_customer_form">

    <TextView
        android:id="@+id/application_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/form_header_marginbot"
        android:layout_marginTop="@dimen/form_header_margintop"
        android:text="@string/mortgage_application"
        android:textAllCaps="true"
        android:textColor="@color/form_text_color"
        android:textSize="@dimen/form_header_text" />

    <TextView
        android:id="@+id/bank_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/form_headeradd_margin"
        android:text="@string/bank_name"
        android:textSize="@dimen/form_headeradd_text" />

    <TextView
        android:id="@+id/bank_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/form_headeradd_margin"
        android:text="@string/bank_address"
        android:textAllCaps="true"
        android:textSize="@dimen/form_headeradd_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/form_headeradd_margin"
        android:text="@string/bank_phone"
        android:textSize="@dimen/form_headeradd_text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_marginTop="@dimen/form_header_margintop"
        android:background="@android:color/darker_gray" />


</merge>