<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/insuranceheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/form_marginstart"
        android:layout_marginTop="@dimen/mortg_form_margin"
        android:text="@string/insurance"
        android:textSize="@dimen/address_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lifeinsurance"
        android:layout_width="@dimen/form_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_marginstart"
        app:layout_constraintEnd_toStartOf="@+id/disabilityinsurance"
        app:layout_constraintStart_toStartOf="@+id/insuranceheader"
        app:layout_constraintTop_toBottomOf="@+id/insuranceheader"
        tools:layout_editor_absoluteY="58dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/life_insurance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/life_insurance"
            android:background="@drawable/border"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/form_marginstart"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/lifeinsurance_errormsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_message"
        android:textColor="@color/red_500"
        android:textSize="@dimen/mortform_text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/lifeinsurance"
        app:layout_constraintStart_toStartOf="@id/lifeinsurance"
        app:layout_constraintTop_toBottomOf="@id/lifeinsurance" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/disabilityinsurance"
        android:layout_width="@dimen/form_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_marginstart"
        app:layout_constraintEnd_toStartOf="@id/criticalinsurance"
        app:layout_constraintStart_toEndOf="@id/lifeinsurance"
        app:layout_constraintTop_toBottomOf="@+id/insuranceheader">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/disability_in"
            android:background="@drawable/border"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/form_marginstart"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/criticalinsurance"
        android:layout_width="@dimen/form_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_marginstart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/disabilityinsurance"
        app:layout_constraintTop_toBottomOf="@+id/insuranceheader">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/critical_in"
            android:background="@drawable/border"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/form_marginstart"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>