<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/suffix"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/suffix"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/name"
            app:layout_constraintHorizontal_weight="0.25"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/spinner"
            style="@style/spinner_style"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nameEditText"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_weight="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/suffix" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/mi"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toEndOf="@+id/suffix" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edtitext_background"
            app:layout_constraintEnd_toStartOf="@+id/miEditText"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toEndOf="@+id/spinner"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/mi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/mi"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/lastName"
            app:layout_constraintHorizontal_weight="0.25"
            app:layout_constraintStart_toEndOf="@+id/name" />

        <EditText
            android:id="@+id/miEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edtitext_background"
            app:layout_constraintEnd_toStartOf="@+id/lastNameEditText"
            app:layout_constraintHorizontal_weight="0.25"
            app:layout_constraintStart_toEndOf="@+id/nameEditText"
            app:layout_constraintTop_toBottomOf="@+id/mi" />

        <TextView
            android:id="@+id/lastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/last_name"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toEndOf="@+id/mi" />

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edtitext_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toEndOf="@+id/miEditText"
            app:layout_constraintTop_toBottomOf="@+id/lastName" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/dobLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@id/nameLayout">

        <TextView
            android:id="@+id/birthDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/birthdate"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@id/ssn"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/monthSpinner"
            style="@style/spinner_style"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/dateEditText"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_weight="0.20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/birthDate" />

        <EditText
            android:id="@+id/dateEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginTop="8dp"
            android:hint="Date"
            android:gravity="center"
            android:background="@drawable/edtitext_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/yearEditText"
            app:layout_constraintHorizontal_weight="0.15"
            app:layout_constraintStart_toEndOf="@+id/monthSpinner" />

        <EditText
            android:id="@+id/yearEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:hint="Year"
            android:gravity="center"
            android:background="@drawable/edtitext_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ssnEditText"
            app:layout_constraintHorizontal_weight="0.15"
            app:layout_constraintStart_toEndOf="@+id/dateEditText" />

        <TextView
            android:id="@+id/ssn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/ssn"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/maritalStatus"
            app:layout_constraintHorizontal_weight="0.3"
            app:layout_constraintStart_toEndOf="@id/birthDate" />

        <EditText
            android:id="@+id/ssnEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edtitext_background"
            app:layout_constraintEnd_toEndOf="@+id/ssn"
            app:layout_constraintHorizontal_weight="0.3"
            app:layout_constraintStart_toEndOf="@+id/birthDate"
            app:layout_constraintTop_toBottomOf="@+id/ssn" />

        <TextView
            android:id="@+id/maritalStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/martialstatus"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.3"
            app:layout_constraintStart_toEndOf="@+id/ssn" />

        <Spinner
            android:id="@+id/maritalStatusSpinner"
            style="@style/spinner_style"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.32"
            app:layout_constraintStart_toStartOf="@+id/maritalStatus"
            app:layout_constraintTop_toBottomOf="@+id/maritalStatus" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>